--- a/src/application/View.fxml
+++ b/src/application/View.fxml
@@ -19,7 +19,7 @@
    <children>
       <Pane layoutX="47.0" layoutY="13.0" prefHeight="73.0" prefWidth="278.0">
          <children>
-            <RadioButton fx:id="radButFactorial" contentDisplay="CENTER" layoutX="1.0" layoutY="40.0" mnemonicParsing="false" text="Factorial">
+            <RadioButton fx:id="radButFactorial" contentDisplay="CENTER" layoutX="1.0" layoutY="40.0" mnemonicParsing="false" selected="true" text="Factorial">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -67,9 +67,9 @@
                </cursor></RadioButton>
          </children>
       </Pane>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="22.0" layoutY="385.0" prefHeight="39.0" prefWidth="125.0" text="The result is" textAlignment="CENTER" textFill="#2652a4">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="394.0" prefHeight="30.0" prefWidth="125.0" text="The result is:" textAlignment="CENTER" textFill="#2652a4">
          <font>
-            <Font name="Rockwell Extra Bold" size="13.0" />
+            <Font name="Arial Black" size="13.0" />
          </font>
       </Label>
       <Pane layoutX="44.0" layoutY="159.0" prefHeight="73.0" prefWidth="278.0">
@@ -121,7 +121,7 @@
             <ColorAdjust />
          </effect>
       </Label>
-      <Pane layoutX="379.0" layoutY="143.0" prefHeight="73.0" prefWidth="312.0">
+      <Pane layoutX="381.0" layoutY="150.0" prefHeight="73.0" prefWidth="312.0">
          <children>
             <RadioButton fx:id="radButForLCM" contentDisplay="CENTER" layoutX="1.0" layoutY="36.0" mnemonicParsing="false" text="LCM" toggleGroup="$optionUser">
                <cursor>
@@ -219,5 +219,34 @@
          </children>
       </Pane>
       <Separator layoutX="139.0" layoutY="234.0" prefHeight="4.0" prefWidth="514.0" />
+      <Pane layoutX="416.0" layoutY="235.0" prefHeight="73.0" prefWidth="303.0">
+         <children>
+            <TextField fx:id="txtFieldPercentX" layoutX="141.0" layoutY="17.0" prefHeight="30.0" prefWidth="52.0" promptText="   X %" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="102.0" layoutY="26.0" prefHeight="21.0" prefWidth="37.0" text="The " textFill="#ff00df">
+               <font>
+                  <Font name="Rockwell Extra Bold" size="13.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="redText" />
+                  <String fx:value="yellowID" />
+               </styleClass>
+            </Label>
+            <TextField fx:id="txtFieldPercentY" layoutX="235.0" layoutY="16.0" prefHeight="30.0" prefWidth="45.0" promptText="   Y" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="24.0" prefHeight="21.0" prefWidth="22.0" text="of" textFill="#ff00df">
+               <font>
+                  <Font name="Rockwell Extra Bold" size="13.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="redText" />
+                  <String fx:value="yellowID" />
+               </styleClass>
+            </Label>
+            <RadioButton fx:id="radButForPercentage" contentDisplay="CENTER" layoutX="14.0" layoutY="28.0" mnemonicParsing="false" text="Percentage" toggleGroup="$optionUser">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </RadioButton>
+         </children>
+      </Pane>
        </children>
        </AnchorPane>
