--- a/bin/application/View.fxml
+++ b/bin/application/View.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
@@ -19,7 +20,7 @@
    <children>
       <Pane layoutX="47.0" layoutY="13.0" prefHeight="73.0" prefWidth="278.0">
          <children>
-            <RadioButton fx:id="radButFactorial" contentDisplay="CENTER" layoutX="1.0" layoutY="40.0" mnemonicParsing="false" text="Factorial">
+            <RadioButton fx:id="radButFactorial" contentDisplay="CENTER" layoutX="1.0" layoutY="40.0" mnemonicParsing="false" selected="true" text="Factorial">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -67,9 +68,9 @@
                </cursor></RadioButton>
          </children>
       </Pane>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="22.0" layoutY="385.0" prefHeight="39.0" prefWidth="125.0" text="The result is" textAlignment="CENTER" textFill="#2652a4">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="394.0" prefHeight="30.0" prefWidth="125.0" text="The result is:" textAlignment="CENTER" textFill="#2652a4">
          <font>
-            <Font name="Rockwell Extra Bold" size="13.0" />
+            <Font name="Arial Black" size="13.0" />
          </font>
       </Label>
       <Pane layoutX="44.0" layoutY="159.0" prefHeight="73.0" prefWidth="278.0">
@@ -121,7 +122,7 @@
             <ColorAdjust />
          </effect>
       </Label>
-      <Pane layoutX="379.0" layoutY="143.0" prefHeight="73.0" prefWidth="312.0">
+      <Pane layoutX="381.0" layoutY="150.0" prefHeight="73.0" prefWidth="312.0">
          <children>
             <RadioButton fx:id="radButForLCM" contentDisplay="CENTER" layoutX="1.0" layoutY="36.0" mnemonicParsing="false" text="LCM" toggleGroup="$optionUser">
                <cursor>
@@ -141,7 +142,7 @@
             <TextField fx:id="txtFieldLCMy" layoutX="272.0" layoutY="25.0" prefHeight="30.0" prefWidth="28.0" promptText="Y" />
          </children>
       </Pane>
-      <Pane layoutX="381.0" layoutY="83.0" prefHeight="65.0" prefWidth="312.0">
+      <Pane layoutX="381.0" layoutY="81.0" prefHeight="65.0" prefWidth="312.0">
          <children>
             <RadioButton fx:id="radButForGCD" contentDisplay="CENTER" layoutX="1.0" layoutY="36.0" mnemonicParsing="false" text="GCD" toggleGroup="$optionUser">
                 <cursor>
@@ -160,7 +161,7 @@
             <TextField fx:id="txtFieldGCDIsNumber" layoutX="235.0" layoutY="22.0" prefHeight="30.0" prefWidth="28.0" promptText="X" />
          </children>
        </Pane>
-      <Pane layoutX="42.0" layoutY="296.0" prefHeight="73.0" prefWidth="438.0">
+      <Pane layoutX="42.0" layoutY="312.0" prefHeight="73.0" prefWidth="339.0">
          <children>
             <TextField fx:id="txtFieldSQRRootX" layoutX="228.0" layoutY="21.0" prefHeight="30.0" prefWidth="28.0" promptText="X" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="85.0" layoutY="29.0" prefHeight="21.0" prefWidth="147.0" text="The square root of " textFill="#ff00df">
@@ -189,7 +190,7 @@
             <TextField fx:id="txtFieldSQRRootY" layoutX="281.0" layoutY="21.0" prefHeight="30.0" prefWidth="45.0" promptText="   Y" />
          </children>
       </Pane>
-      <Pane layoutX="43.0" layoutY="233.0" prefHeight="73.0" prefWidth="376.0">
+      <Pane layoutX="43.0" layoutY="249.0" prefHeight="73.0" prefWidth="376.0">
          <children>
             <TextField fx:id="txtFieldAbsX" layoutX="269.0" layoutY="27.0" prefHeight="30.0" prefWidth="28.0" promptText="X" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="106.0" layoutY="33.0" prefHeight="21.0" prefWidth="164.0" text="The absolute value of " textFill="#ff00df">
@@ -218,6 +219,38 @@
             </RadioButton>
          </children>
       </Pane>
-      <Separator layoutX="139.0" layoutY="234.0" prefHeight="4.0" prefWidth="484.0" />
+      <Separator layoutX="113.0" layoutY="244.0" prefHeight="4.0" prefWidth="514.0" />
+      <Pane layoutX="416.0" layoutY="251.0" prefHeight="73.0" prefWidth="303.0">
+         <children>
+            <TextField fx:id="txtFieldPercentX" layoutX="141.0" layoutY="17.0" prefHeight="30.0" prefWidth="52.0" promptText="   X %" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="102.0" layoutY="26.0" prefHeight="21.0" prefWidth="37.0" text="The " textFill="#ff00df">
+               <font>
+                  <Font name="Rockwell Extra Bold" size="13.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="redText" />
+                  <String fx:value="yellowID" />
+               </styleClass>
+            </Label>
+            <TextField fx:id="txtFieldPercentY" layoutX="235.0" layoutY="16.0" prefHeight="30.0" prefWidth="45.0" promptText="   Y" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="24.0" prefHeight="21.0" prefWidth="22.0" text="of" textFill="#ff00df">
+               <font>
+                  <Font name="Rockwell Extra Bold" size="13.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="redText" />
+                  <String fx:value="yellowID" />
+               </styleClass>
+            </Label>
+            <RadioButton fx:id="radButForPercentage" contentDisplay="CENTER" layoutX="14.0" layoutY="28.0" mnemonicParsing="false" text="Percentage" toggleGroup="$optionUser">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </RadioButton>
+         </children>
+      </Pane>
+      <CheckBox fx:id="sallesCheckBox" layoutX="430.0" layoutY="334.0" mnemonicParsing="false" text="Salles" />
+      <Label layoutX="493.0" layoutY="334.0" text="The new price is" />
+      <Label fx:id="lblForSales" layoutX="589.0" layoutY="334.0" prefHeight="17.0" prefWidth="37.0" />
        </children>
        </AnchorPane>
